# rust-tide-clock

./: .gitlab-ci.yml  README.md
tide-clock/: .gitignore  Cargo.toml
tide-clock/.cargo/: config
tide-clock/resources/: Secrets-Template.toml  Settings.toml  tides.json
tide-clock/src/: display.rs  font.rs  main.rs  maths.rs  ssd1305.rs
tide-clock/src/tides/: mod.rs
