[package]
name = "tide-clock"
version = "0.1.0"
authors = ["Peter Cardwell-Gardner <burntproduce@gmail.com>"]
edition = "2018"
include = ["resrouces/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
ordered-float = "2.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
simple-error = "0.1.9"

[target.'cfg(target_arch="arm")'.dependencies]
rppal = "0.9.0"
